# multiplaytest

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  servers.json  test_respawn.py
.claude/: settings.local.json
client/: game_client.py  main.py  renderer.py  server_manager.py
docs/: architecture.md  client.md  deployment.md  game-logic.md  protocol.md  server.md
server/: Dockerfile  game_state.py  main.py  models.py
